[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Unmasque_Union_Extraction"
version = "0.0.1"
authors = [
  { name="Ahana Pradhan", email="sendatahana@gmail.com" },
]
description = "Union query extractor"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ahanapradhan/UnionExtraction"
